Tech Interview Globish

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,10 @@
 @import "./font";
 
 body {
-  font-family: "Rubik", sans-serif;
-  background: #39b7e8;
+  font-family: "Kanit", sans-serif;
+
+}
+
+.v-card {
+  border-radius: 24px !important;
 }
